# rag-llm-fasoo-portfolio

./: .env.example  .gitignore  CLAUDE.md  GitHub_연동_가이드.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  logging_config.py  settings.py
docs/troubleshooting/: 422_error_analysis.md
scripts/: run_ingestion.py  run_rag.py
src/: __init__.py
src/chunker/: __init__.py  base_chunker.py  fixed_chunker.py  recursive_chunker.py  semantic_chunker.py
src/crawler/: __init__.py  base_crawler.py  coupang_crawler.py  file_loader.py  image_downloader.py  naver_shopping_crawler.py  shopping_crawler.py  web_crawler.py
src/embedder/: __init__.py  base_embedder.py  bge_m3_embedder.py  huggingface_embedder.py  openai_embedder.py
src/generator/: __init__.py  llm_client.py  prompt_builder.py  response_parser.py
src/pipeline/: __init__.py  ingestion_pipeline.py  rag_pipeline.py
src/preprocessor/: __init__.py  cleaner.py  normalizer.py
src/retriever/: __init__.py  base_retriever.py  dense_retriever.py  hybrid_retriever.py  sparse_retriever.py
src/vectorstore/: __init__.py  base_store.py  chroma_store.py  faiss_store.py  pinecone_store.py
tests/: TEST_GUIDE.md  __init__.py
tests/test_chunker/: __init__.py  test_fixed_chunker.py
tests/test_crawler/: __init__.py  test_web_crawler.py
tests/test_embedder/: __init__.py  conftest.py  test_base_embedder.py  test_huggingface_embedder.py  test_openai_embedder.py
tests/test_pipeline/: __init__.py  test_ingestion_pipeline.py  test_rag_pipeline.py
tests/test_preprocessor/: __init__.py  test_cleaner.py  test_normalizer.py
tests/test_retriever/: __init__.py  test_base_retriever.py  test_dense_retriever.py  test_hybrid_retriever.py  test_sparse_retriever.py
tests/test_vectorstore/: __init__.py  test_base_store.py  test_chroma_store.py  test_faiss_store.py  test_pinecone_store.py
visualizer/: Dockerfile.api  README.md  __init__.py  docker-compose.yml  requirements.txt
visualizer/api/: __init__.py  main.py  models.py
visualizer/n8n/: workflow_document_ingest.json  workflow_rag_query.json
(+34 files in other folders)
